# cat-plate-recognizer

./: .gitignore  .gitmodules  Dockerfile  Makefile  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
car_plate_recognizer/: __main__.py  controller.py
car_plate_recognizer/handlers/: __init__.py  base.py
car_plate_recognizer/handlers/circuitdigest/: __init__.py
car_plate_recognizer/handlers/neural_1/: __init__.py  handler.py  ml_model.py  preprocessors.py
car_plate_recognizer/handlers/nomeroff/: __init__.py  bbox_np_points.py  handler.py  options_detector.py  yolov5_detector.py
car_plate_recognizer/handlers/nomeroff/data_modules/: augmentations.py  data_loaders.py  numberplate_inverse_data_module.py  numberplate_ocr_data_module.py  numberplate_options_data_module.py  numberplate_orientation_data_module.py
car_plate_recognizer/handlers/nomeroff/nnmodels/: classification_model.py  numberplate_inverse_model.py  numberplate_options_model.py  numberplate_orientation_model.py  ocr_model.py
car_plate_recognizer/handlers/nomeroff/text_detectors/: __init__.py  am.py  by.py  eu.py  eu_ua_1995.py  eu_ua_2004_2015.py  ge.py  kg.py  kz.py  ru.py  su.py
car_plate_recognizer/handlers/nomeroff/text_postprocessing/: __init__.py  base.py  eu_ua_1995.py  eu_ua_2004.py  eu_ua_2004_squire.py  eu_ua_2015.py  eu_ua_2015_squire.py  ge.py
car_plate_recognizer/handlers/nomeroff/tools/: __init__.py  custom_options.py  filters.py  image_processing.py  mcm.py  ocr_tools.py  splitter.py  yolo_tools.py
(+2 files in other folders)
