[metadata]
license      = Apache-2.0
license_file = LICENSE.md
platforms    = any
description  = Open-source cat plate recognizer running on Raspbery Pi.
classifier =
    Development Status :: 4 - Alpha
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
max-line-length = 120
doctests = True
# To work with Black
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    W503,
    E203,
    D202,
    W504
noqa-require-code = True
